--- a/1_论文/论文正文.md
+++ b/1_论文/论文正文.md
@@ -4,5 +4,7 @@
 
 [请在此处上传您的论文正文的pdf格式文件]
 
+[二维分形结构的电磁散射特性模拟与分形维数关联研究.pdf](https://github.com/user-attachments/files/20867979/default.pdf)
+
 2. 如果你使用markdown格式撰写论文，可以直接在此处撰写论文正文。
 
