--- a/4_Presentation/讲解视频.md
+++ b/4_Presentation/讲解视频.md
@@ -4,5 +4,6 @@
 
 
 
-Uploading 350a9e5f040c9f08e7ba3317f907c055.mp4…
+通过网盘分享的文件：讲解视频.mp4
+链接: https://pan.baidu.com/s/15yd56sP576X0SfrUpIHjZQ 提取码: pmc3
 
